# example-python-application

./: Dockerfile  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: image.yml  release.yml
app/: data_model.py  logging_config.py  quickapi.py
